# DeepLearning-in-CPP

./: OpenCV.installation.txt
DL-C++/ch-10(BackProp)/src/: naiveBackPropagation.cpp
DL-C++/ch-2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.cpp  hello_world_functional  my_program
DL-C++/ch-2/funtional/src/: using_functional.cpp
DL-C++/ch-4/: CMakeLists.txt
DL-C++/ch-4/src/: convolution_2d_example.cpp  using_openCV.cpp
DL-C++/ch-5(ANN)/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
DL-C++/ch-5(ANN)/src/: fc_layer.cpp  mlp_example.cpp  sigmoid.cpp
DL-C++/ch-5(ANN)/src/includes/: fully_connected_layer.hpp
DL-C++/ch-6/: CMakeLists.txt
DL-C++/ch-6/src/: bce.cpp  cce.cpp  mse.cpp
DL-C++/ch-7/: CMakeLists.txt  Makefile
DL-C++/ch-7/src/: batch_softmax.cpp  iris_example.c++  softmax.cpp
DL-C++/ch-8/src/: pooling.cpp
DL-C++/ch-9/src/: grad_kernal.cpp
DL-C++/dllcpp/: pyvenv.cfg
